--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
     
 <h1>Web 2 Framework</h1>
 
+<img src="http;paoiaproeiwhrapocnapoiwje" alt="">
+
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- Plugins -->
+    <!-- My Scripts -->
+    <script src="js/scripts.js"></script>
 </body>
 </html>
